--- a/receitas/templates/receita.html
+++ b/receitas/templates/receita.html
@@ -9,28 +9,13 @@
 </div>
 
 <!-- Search Wrapper -->
-<div class="search-wrapper">
-    <!-- Close Btn -->
-    <div class="close-btn"><i class="fa fa-times" aria-hidden="true"></i></div>
-
-    <div class="container">
-        <div class="row">
-            <div class="col-12">
-                <form action="#" method="post">
-                    <input type="search" name="search" placeholder="O que está procurando...">
-                    <button type="submit"><i class="fa fa-search" aria-hidden="true"></i></button>
-                </form>
-            </div>
-        </div>
-    </div>
-</div>
-
+{% include 'partials/_busca.html' %}
 <!-- ##### Header Area Start ##### -->
-{% include 'partials/menu.html' %}
+{% include 'partials/_menu.html' %}
 <!-- ##### Header Area End ##### -->
 
 <!-- Receipe Post Search -->
-<div class="receipe-post-search mb-80">
+<!-- <div class="receipe-post-search mb-80">
     <div class="container">
         <form action="#" method="post">
             <div class="row">
@@ -47,14 +32,18 @@
             </div>
         </form>
     </div>
-</div>
+</div> -->
 
 <!-- Receipe Slider -->
 <div class="container">
     <div class="row">
         <div class="col-12">
             <div class="receipe-slider owl-carousel">
-                <img src="{% static 'img/bg-img/tomate_banner.jpg' %}">
+                {% if receita.foto_receita == '' %}
+                    <img src="{% static 'img/bg-img/tomate_banner.jpg' %}">
+                {% else %}
+                    <img src="{{receita.foto_receita.url }}">
+                {% endif %}
             </div>
         </div>
     </div>
@@ -99,7 +88,7 @@
             <!-- Ingredientes -->
 
             <!-- ##### Footer Area Start ##### -->
-            {% include 'partials/footer.html' %}
+            {% include 'partials/_footer.html' %}
             <!-- ##### Footer Area Start ##### -->
         </div>
     </div>
